--- a/app/design/frontend/default/mluczka/template/page/html/breadcrumbs.phtml
+++ b/app/design/frontend/default/mluczka/template/page/html/breadcrumbs.phtml
@@ -24,20 +24,19 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<?php
-/**
- * @see Mage_Page_Block_Template_Links
- */
-?>
-<?php $_links = $this->getLinks(); ?>
-<?php if(count($_links)>0): ?>
-<ul class="<?php echo $this->getData('className'); ?>"<?php if($this->getName()): ?> id="<?php echo $this->getName() ?>"<?php endif;?>>
-    <?php foreach($_links as $_link): ?>
-        <?php if ($_link instanceof Mage_Core_Block_Abstract):?>
-            <?php echo $_link->toHtml() ?>
+<?php if($crumbs && is_array($crumbs)): ?>
+<div class="breadcrumbs">
+    <?php foreach($crumbs as $_crumbName=>$_crumbInfo): ?>
+        <?php if($_crumbInfo['link']): ?>
+            <a href="<?php echo $_crumbInfo['link'] ?>" title="<?php echo $this->escapeHtml($_crumbInfo['title']) ?>"><?php echo $this->escapeHtml($_crumbInfo['label']) ?></a>
+        <?php elseif($_crumbInfo['last']): ?>
+            <strong><?php echo $this->escapeHtml($_crumbInfo['label']) ?></strong>
         <?php else: ?>
-            <li<?php if($_link->getIsFirst()||$_link->getIsLast()): ?> class="<?php if($_link->getIsFirst()): ?>first<?php endif; ?><?php if($_link->getIsLast()): ?> last<?php endif; ?>"<?php endif; ?> <?php echo $_link->getLiParams() ?>><?php echo $_link->getBeforeText() ?><a href="<?php echo $_link->getUrl() ?>" title="<?php echo $_link->getTitle() ?>" <?php echo $_link->getAParams() ?>><?php echo $_link->getLabel() ?></a><?php echo $_link->getAfterText() ?></li>
-        <?php endif;?>
+            <?php echo $this->escapeHtml($_crumbInfo['label']) ?>
+        <?php endif; ?>
+        <?php if(!$_crumbInfo['last']): ?>
+            &rsaquo;
+        <?php endif; ?>
     <?php endforeach; ?>
-</ul>
+</div>
 <?php endif; ?>
