--- a/app/design/frontend/default/mluczka/template/page/html/footer.phtml
+++ b/app/design/frontend/default/mluczka/template/page/html/footer.phtml
@@ -1,62 +1,11 @@
-<?php
-/**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magentocommerce.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magentocommerce.com for more information.
- *
- * @category    design
- * @package     base_default
- * @copyright   Copyright (c) 2013 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
- */
-?>
-
-<div id="newsletter-delivery">
-
-    <div id="newsletter">
-        <h3>Sign up for news and exclusive offers!</h3>
-
-        <form id="newsletter-input" action="#" method="get">
-                <div class="form-newsletter">
-                    <input type="text" name="" value="" class="input-text" />
-                    <button type="submit" title="Search" class="button">Sign Up</button>
-                </div><!--newsletter-input-->
-        </form>
-    </div><!--newsletter-->
-
-    <div id="delivery">
-        <h3>Free delivery for orders over &pound;75</h3>
-        <p>UK Courier Delivery: &pound;4.95 within 5 working days or &pound;7.95 for 2-3 day</p>
-        <p>Wordwide Delivery: Priced at checkout</p>
-    </div><!--delivery-->
-
-    <div class="clr"></div>
-
-</div><!--newsletter delivery-->
+<?php echo $this->getChildHtml('newsletter'); ?>
 
 <div id="bottom-links">
 
     <div id="bottom-left">
 
         <div class="bottom-column-left column-one">
-            <h4>Contact Us</h4>
-            <p>Email: <a href="mailto:info@purelivingcolletion.com">info@purelivingcolletion.com</a></p>
-            <p>Tel: 01234 56789</p>
-            <p>Mon - Fr 9.00 - 5.30 GMT</p>
+            <?php echo Mage::getModel('core/variable')->loadByCode('contact-info')->getValue('html'); ?>
         </div><!--bottom-column-left-->
 
         <div class="bottom-column-right column-two">
@@ -94,7 +43,7 @@
 
         <div class="bottom-column-right column-four">
             <h4>About Our Site</h4>
-            <?php echo $this->getChildHtml() ?>
+            <?php echo $this->getChildHtml('footer_links'); ?>
         </div><!--bottom-column-right-->
 
         <div class="clr"></div>
@@ -106,7 +55,5 @@
 </div><!--bottom links-->
 
 <div id="footer">
-    <p>Copyright 2011 Pure Living Collection. All Rights Reserved. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum facilisis felis lorem. Sed pellentesque dapibus consequat.</p>
-    <p>Curabitur nisi nisi, aliquam eu vehicula porttitor, vulputate ut tellus. Nulla massa quam, lacinia a adipiscing ac, fermentum volutpat velit. Nulla ac tortor eget justo accumsan facilisis. In hac habitasse platea dictumst. Nulla vehicula tortor vel nisi convallis a blandit turpis bibendum. Sed id diam no tasse platea dictumst. Nutasse platea dictumst. Nulla lla n.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum facilisis felis lorem. Sed pellentesque dapibus consequat.</p>
+    <p><?php echo nl2br($this->getCopyright()); ?></p>
 </div><!--footer-->
