--- a/app/design/frontend/default/mluczka/template/page/html/header.phtml
+++ b/app/design/frontend/default/mluczka/template/page/html/header.phtml
@@ -1,29 +1,5 @@
 <?php
 /**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magentocommerce.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magentocommerce.com for more information.
- *
- * @category    design
- * @package     base_default
- * @copyright   Copyright (c) 2013 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
- */
-/**
  * @var Mage_Page_Block_Html_Header $this
  */
 ?>
@@ -35,6 +11,7 @@
             <a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo"><strong><?php echo $this->getLogoAlt() ?></strong><img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" /></a>
         <?php endif?>
         <div class="quick-access">
+            <?php $this->getChild('topLinks')->setData('className', 'links'); ?>
             <?php echo $this->getChildHtml('topLinks') ?>
             <?php echo $this->getChildHtml('topSearch') ?>
             <div id="checkout-button">
@@ -46,19 +23,3 @@
     </div>
 </div>
 <?php echo $this->getChildHtml('topMenu') ?>
-
-<div id="baner">
-    <div id="slider" class="nivoSlider">
-        <img src="<?php echo $this->getSkinUrl(); ?>images/slide-1.jpg" alt="" />
-        <img src="<?php echo $this->getSkinUrl(); ?>images/slide-2.jpg" alt="" />
-        <img src="<?php echo $this->getSkinUrl(); ?>images/slide-3.jpg" alt="" />
-        <img src="<?php echo $this->getSkinUrl(); ?>images/slide-4.jpg" alt="" />
-    </div>
-</div><!--baner-->
-
-<div id="box-3-offer">
-	<div class="box-3-offer-column"><img src="<?php echo $this->getSkinUrl(); ?>images/box3-1.jpg" alt="" /></div><!--box-3-offer-->
-	<div class="box-3-offer-column"><img src="<?php echo $this->getSkinUrl(); ?>images/box3-2.jpg" alt="" /></div><!--box-3-offer-->
-	<div class="box-3-offer-column box-3-offer-last"><img src="<?php echo $this->getSkinUrl(); ?>images/box3-3.jpg" alt="" /></div><!--box-3-offer-->
-    <div class="clr"></div>
-</div><!--box-3-offer-->
