--- a/app/design/frontend/default/mluczka/layout/page.xml
+++ b/app/design/frontend/default/mluczka/layout/page.xml
@@ -43,6 +43,7 @@ Default layout, loads most of the pages
                 <action method="addCss"><stylesheet>css/style.css</stylesheet></action>
                 <action method="addCss"><stylesheet>css/mscarousel.css</stylesheet></action>
                 <action method="addCss"><stylesheet>css/nivo-slider.css</stylesheet></action>
+                <action method="addCss"><stylesheet>css/cat-style.css</stylesheet></action>
             </block>
 
             <block type="core/text_list" name="after_body_start" as="after_body_start" translate="label">
