--- a/app/design/frontend/default/mluczka/template/page/html/breadcrumbs.phtml
+++ b/app/design/frontend/default/mluczka/template/page/html/breadcrumbs.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 <?php if($crumbs && is_array($crumbs)): ?>
-<div class="breadcrumbs">
+<div id="breadcrumbs">
     <?php foreach($crumbs as $_crumbName=>$_crumbInfo): ?>
         <?php if($_crumbInfo['link']): ?>
             <a href="<?php echo $_crumbInfo['link'] ?>" title="<?php echo $this->escapeHtml($_crumbInfo['title']) ?>"><?php echo $this->escapeHtml($_crumbInfo['label']) ?></a>
