--- a/app/design/frontend/default/mluczka/template/page/2columns-left.phtml
+++ b/app/design/frontend/default/mluczka/template/page/2columns-left.phtml
@@ -17,7 +17,7 @@
         <?php echo $this->getChildHtml('breadcrumbs') ?>
         <div class="main-container col2-left-layout">
             <div class="main">
-                <div id="left">[left start]<?php echo $this->getChildHtml('left') ?>[left end]</div>
+                <div id="left"><?php echo $this->getChildHtml('left') ?></div>
                 <div id="right"><?php echo $this->getChildHtml('content') ?></div>
             </div>
         </div>
