--- a/app/design/frontend/default/mluczka/layout/catalog.xml
+++ b/app/design/frontend/default/mluczka/layout/catalog.xml
@@ -69,7 +69,8 @@ Category default layout
             <action method="setTemplate"><template>page/2columns-left.phtml</template></action>
         </reference>
         <reference name="left">
-            <block type="catalog/navigation" name="catalog.leftnav" after="currency" template="catalog/navigation/left.phtml"/>
+            <block type="catalog/navigation" template="catalog/navigation/left.phtml"/>
+            <block type="reports/product_viewed" template="reports/product_viewed.phtml" />
         </reference>
         <reference name="content">
             <block type="catalog/category_view" name="category.products" template="catalog/category/view.phtml">
@@ -172,7 +173,7 @@ Product view
         <label>Catalog Product View (Any)</label>
         <!-- Mage_Catalog -->
         <reference name="root">
-            <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
+            <action method="setTemplate"><template>page/1column.phtml</template></action>
         </reference>
         <reference name="head">
             <action method="addJs"><script>varien/product.js</script></action>
