--- a/app/design/frontend/default/mluczka/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/mluczka/template/catalog/product/view.phtml
@@ -6,56 +6,66 @@
  * @see Mage_Review_Block_Product_View
  */
 ?>
-<?php $_helper = $this->helper('catalog/output'); ?>
-<?php $_product = $this->getProduct(); ?>
+<?php
+    $_helper = $this->helper('catalog/output');
+    $_coreHelper = $this->helper('core');
+    $_product = $this->getProduct();
+?>
 <div id="messages_product_view"><?php echo $this->getMessagesBlock()->getGroupedHtml() ?></div>
 
 <div id="single-left">
-        <div id="thumb-left">
-            <?php foreach ($_product->getMediaGalleryImages() as $_image): ?>
-                <a href="#" onclick="popWin('<?php echo $this->getGalleryUrl($_image) ?>', 'gallery', 'width=300,height=300,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes'); return false;" title="<?php echo $this->escapeHtml($_image->getLabel()) ?>"><img src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(56); ?>" width="64" height="63" alt="<?php echo $this->escapeHtml($_image->getLabel()) ?>" /></a>
-            <?php endforeach; ?>
-        </div><!--thumb-left-->
+    <div id="thumb-left">
+        <?php foreach ($_product->getMediaGalleryImages() as $_image): ?>
+            <a href="#" onclick="popWin('<?php echo $this->getGalleryUrl($_image) ?>', 'gallery', 'width=300,height=300,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes'); return false;" title="<?php echo $this->escapeHtml($_image->getLabel()) ?>">
+                <img src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(56); ?>" width="64" height="63" alt="<?php echo $this->escapeHtml($_image->getLabel()) ?>" />
+            </a>
+        <?php endforeach; ?>
+    </div><!--thumb-left-->
 
-        <div id="single-thumb-right">
+    <div id="single-thumb-right">
 
-            <div id="single-thumb-right-foto">
-                <?php
-                    $_img = '<img src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(265).'" alt="'.$this->escapeHtml($this->getImageLabel()).'" title="'.$this->escapeHtml($this->getImageLabel()).'" />';
-                    echo $_helper->productAttribute($_product, $_img, 'image');
-                ?>
-                <p class="single-description">Click image to view larger picture</p>
-            </div><!--single-thumb-right-foto-->
+        <div id="single-thumb-right-foto">
+            <?php
+                $_img = '<img src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(265).'" alt="'.$this->escapeHtml($this->getImageLabel()).'" title="'.$this->escapeHtml($this->getImageLabel()).'" />';
+                echo $_helper->productAttribute($_product, $_img, 'image');
+            ?>
+            <p class="single-description"><?php echo $this->__('Click image to view larger picture'); ?></p>
+        </div><!--single-thumb-right-foto-->
 
+        <?php
+            $relatedProducts = $_product->getRelatedProductCollection()
+                                        ->addAttributeToSelect(array('name', 'price', 'special_price', 'small_image'));
+        ?>
+        <?php if($relatedProducts->count()) : ?>
             <div class="perfect-with">
+                <h3><?php echo $this->__('Goes perfectly with:'); ?></h3>
 
-                <h3>Goes perfectly with:</h3>
+                <?php foreach ($relatedProducts as $_related): ?>
+                    <div class="perfect-with-img">
+                        <a href="<?php echo $_related->getProductUrl(); ?>" title="<?php echo $this->htmlEscape($_related->getName()); ?>">
+                            <img alt="" src="<?php echo $this->helper('catalog/image')->init($_related, 'small_image')->resize(80, 80); ?>" />
+                        </a>
 
-                <div class="perfect-with-img">
-                    <img alt="" src="products/p1.jpg" />
-                    <p class="perfect-with-desc">Mulberry Silk Pillows</p>
-                    <p class="perfect-with-price">&pound;65.00</p>
-                </div>
+                        <p class="perfect-with-desc"><?php echo $this->htmlEscape($_related->getName()); ?></p>
 
-                <div class="perfect-with-img">
-                    <img alt="" src="products/p2.jpg" />
-                    <p class="perfect-with-desc">Mulberry Silk Pillows</p>
-                    <p class="perfect-with-price">&pound;65.00</p>
-                </div>
-
-                <div class="perfect-with-img">
-                    <img alt="" src="products/p3.jpg" />
-                    <p class="perfect-with-desc">Mulberry Silk Pillows</p>
-                    <p class="perfect-with-price perfect-with-discount">&pound;65.00</p>
-                    <p class="perfect-with-price-sale">Special Price: &pound;45.00</p>
-                </div>
+                        <?php if($_related->getSpecialPrice()) : ?>
+                            <p class="perfect-with-price perfect-with-discount"><?php echo $_coreHelper->formatPrice($_related->getPrice()); ?></p>
+                            <p class="perfect-with-price-sale">
+                                <?php echo $this->__('Special Price:') . ' ' . $_coreHelper->formatPrice($_related->getSpecialPrice()); ?>
+                            </p>
+                        <?php else : ?>
+                            <p class="perfect-with-price"><?php echo $_coreHelper->formatPrice($_related->getPrice()); ?></p>
+                        <?php endif; ?>
+                    </div>
+                <?php endforeach; ?>
 
                 <div class="clr"></div>
             </div><!--perfect with-->
+        <?php endif; ?>
 
-        </div><!--single-thumb-right-->
+    </div><!--single-thumb-right-->
 
-        <div class="clr"></div>
+    <div class="clr"></div>
 </div>
 
 <div id="single-right">
@@ -97,7 +107,7 @@
                     <td class="product-price">
                         <?php
                             $productPrice = $_product->getSpecialPrice() ? $_product->getSpecialPrice() : $_product->getPrice();
-                            echo $this->helper('core')->formatPrice($productPrice);
+                            echo $_coreHelper->formatPrice($productPrice);
                         ?>
                     </td>
                 </tr>
@@ -136,24 +146,24 @@
             </ul>
 
             <div id="product-details-tab1" class="product-details-tab">
-                <?php echo $_helper->productAttribute($_product, nl2br($_product->getDescription()), 'description') ?>
+                <?php echo $_helper->productAttribute($_product, nl2br($_product->getDescription()), 'description'); ?>
             </div><!--product-details-tab1-->
 
             <div id="product-details-tab2" class="product-details-tab">
-                tab 2
+                <?php echo $_helper->productAttribute($_product, nl2br($_product->getData('product_details')), 'product_details'); ?>
             </div><!--product-details-tab2-->
 
             <div id="product-details-tab3" class="product-details-tab">
-                tab 3
+                <?php echo $_helper->productAttribute($_product, nl2br($_product->getData('sizing_information')), 'sizing_information'); ?>
             </div><!--product-details-tab3-->
 
             <div id="product-details-tab4" class="product-details-tab">
-                tab 4
+                <?php echo $_helper->productAttribute($_product, nl2br($_product->getData('delivery_and_returns')), 'delivery_and_returns'); ?>
             </div><!--product-details-tab4-->
 
             <script type="text/javascript">
                 $('.product-details-tab').hide();
-                $('#product-details-tab-1').show();
+                $('#product-details-tab1').show();
 
                 $('#product-details-menu').children().click(function(){
                     $('.product-details-menu-current').removeClass('product-details-menu-current');
@@ -162,6 +172,8 @@
                     var id = '#product-details-tab' + $(this).attr('mage-tab');
                     $('.product-details-tab').hide();
                     $(id).show();
+
+                    return false;
                 });
             </script>
 
