--- a/app/design/frontend/default/mluczka/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/mluczka/template/catalog/product/view.phtml
@@ -11,7 +11,7 @@
     $_coreHelper = $this->helper('core');
     $_product = $this->getProduct();
 ?>
-<div id="messages_product_view"><?php echo $this->getMessagesBlock()->getGroupedHtml() ?></div>
+<div id="messages_product_view"><?php echo $this->getMessagesBlock()->getGroupedHtml(); ?></div>
 
 <div id="single-left">
     <div id="thumb-left">
