--- a/app/design/frontend/default/mluczka/layout/catalog.xml
+++ b/app/design/frontend/default/mluczka/layout/catalog.xml
@@ -193,6 +193,7 @@ Product view
                 <block type="catalog/product_view_media" name="product.info.media" as="media" template="catalog/product/view/media.phtml"/>
                 <block type="catalog/product_view" name="catalog.product.related" as="related" template="catalog/product/view/related.phtml"/>
                 <block type="catalog/product_view" name="product.info.details" as="details" template="catalog/product/view/details.phtml"/>
+                <block type="catalog/product_view" name="product.info.customers-review" as="customers-review" template="catalog/product/view/customers-review.phtml"/>
                 <block type="catalog/product_view" name="product.info.crosssell" as="crosssell" template="catalog/product/view/crosssell.phtml"/>
                 <block type="catalog/product_view" name="product.info.form" as="form" template="catalog/product/view/form.phtml">
                     <block type="catalog/product_view" name="product.info.attributes" as="attributes" template="catalog/product/view/attributes.phtml"/>
