--- a/app/design/frontend/default/mluczka/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/mluczka/template/catalog/product/view.phtml
@@ -8,7 +8,6 @@
 ?>
 <?php
     $_helper = $this->helper('catalog/output');
-    $_coreHelper = $this->helper('core');
     $_product = $this->getProduct();
 ?>
 <div id="messages_product_view"><?php echo $this->getMessagesBlock()->getGroupedHtml(); ?></div>
@@ -47,29 +46,5 @@
 
 <div class="clr"></div>
 
-<div id="customers-help">
-
-    <div class="customers-reviews">
-        <h3><?php echo $this->__('Customers Review'); ?></h3>
-        <div class="customres-box">
-            <p class="customres-box-big">
-                <?php echo $this->__('Write Your Own Review about') . ' ' . $_helper->productAttribute($_product, $_product->getName(), 'name'); ?>
-            </p>
-            <p class="customres-box-small"><?php echo $this->__('Only registered users can write reviews. Please log in or register'); ?></p>
-        </div>
-    </div><!--customers review-->
-
-    <div class="need-help">
-        <h3><?php echo $this->__('Need Help Deciding?'); ?></h3>
-        <ul>
-            <li><a href="#"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') . $this->__('Reviews'); ?></a></li>
-            <li><a href="#"><?php echo $this->__('Which Duvet do I choose?'); ?></a></li>
-            <li><a href="#"><?php echo $this->__('Continental Pillows'); ?></a></li>
-        </ul>
-    </div><!--need help-->
-
-</div><!--customer-help-->
-
-<div class="clr"></div>
-
+<?php echo $this->getChildHtml('customers-review'); ?>
 <?php echo $this->getChildHtml('crosssell'); ?>
